fix: Handle horizontal overflow, add media query for main

--- a/03-blog-example/assets/style.css
+++ b/03-blog-example/assets/style.css
@@ -25,6 +25,7 @@ main {
   padding-top: 64px;
   isolation: isolate;
   max-width: 100%;
+  /* overflow: auto; */
 }
 
 article p,
@@ -159,4 +160,10 @@ a {
 
 .heading-content {
   position: relative;
+}
+
+@media (max-width: 825px) {
+  main {
+    overflow: hidden;
+  }
 }
